--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,9 @@ coverage.xml
 *.log
 
 # Sphinx documentation
-docs/_build/
+/docs/.build/
+/docs/example-usage.rst
+/docs/example-usage_files
 
 # PyBuilder
 target/
