--- a/docs/Makefile
+++ b/docs/Makefile
@@ -21,7 +21,12 @@ I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
 
-all: doctest html
+all: examples doctest html
+
+examples: example-usage.rst
+
+example-usage.rst: example-usage.ipynb
+	ipython nbconvert example-usage.ipynb --to rst
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
